<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/SettingsCategory_Name1">

        <ListPreference
            android:key="@string/roundWinScore"
            android:title="@string/SettingsTitle_roundWinScore"
            android:persistent="true"
            android:entries="@array/roundWinScoresArray"
            android:entryValues="@array/roundWinScoresArrayValues"
            android:defaultValue="@string/roundWinScoreDefault">
        </ListPreference>

        <SwitchPreference
            android:key="@string/countRounds"
            android:title="@string/SettingsTitle_countRounds"
            android:defaultValue="true"
            android:summary="@string/SettingsSummary_countRounds"
            android:persistent="true">
        </SwitchPreference>

        <EditTextPreference
            android:key="@string/defaultTeamNameA"
            android:title="@string/SettingsTitle_defaultTeamNameA"
            android:defaultValue="Mi"
            android:persistent="true">
        </EditTextPreference>

        <EditTextPreference
            android:key="@string/defaultTeamNameB"
            android:title="@string/SettingsTitle_defaultTeamNameB"
            android:defaultValue="Vi"
            android:persistent="true"
            android:inputType="text">
        </EditTextPreference>

        <ListPreference
            android:key="@string/themeColor"
            android:title="@string/SettingsTitle_themeColor"
            android:persistent="true"
            android:entries="@array/themeColors"
            android:entryValues="@array/themeColorsValues"
            android:defaultValue="@string/themeColorDefault">
        </ListPreference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/SettingsCategory_Name2">

        <Preference
            android:title="@string/HelpEntryTitle1"
            android:summary="@string/HelpEntryText1">
        </Preference>

        <Preference
            android:title="@string/HelpEntryTitle2"
            android:summary="@string/HelpEntryText2">
        </Preference>

    </PreferenceCategory>



</PreferenceScreen>