<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.merodyadt.belotasistent.MainActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBarMenu"
        android:background="@color/colorPrimary"
        >
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBarMenu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/BtnIgra"
                android:onClick="StartGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/gameStart" />


            <Button
                android:id="@+id/BtnIgraTournament"
                android:onClick="StartTournamentGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/gameTournament" />


            <Button
                android:id="@+id/BtnPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="OpenSettings"
                android:layout_marginTop="25dp"
                android:background="@android:drawable/btn_default"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/settings"/>

            <Button
                android:id="@+id/BtnAbout"
                android:onClick="ShowAboutDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/about" />

            <Button
                android:id="@+id/BtnExit"
                android:onClick="ExitApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/exit" />




        </LinearLayout>
    </ScrollView>

</RelativeLayout>